--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,6 +2,7 @@ name: jira_teko_flutter
 description: Auto push testcases and result to jira.
 version: 0.0.1
 author: Nghe Quyet Tien
+homepage: https://github.com/nghetien/jira_teko_flutter
 
 environment:
   sdk: ">=2.17.3 <3.0.0"
